second push, first charts, sizing problem !!

--- a/public/index.html
+++ b/public/index.html
@@ -30,15 +30,15 @@
 
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 
-<script src="bower_components/grid-master/src/gridList.js"></script>
-<script src="bower_components/grid-master/src/jquery.gridList.js"></script>
-
 <script src="bower_components/highcharts/highcharts.src.js"></script>
 
-
+<!--app-->
 <script src="app.js"></script>
+<!--controller-->
 <script src="modules/controller/home_controller.js"></script>
-
+<!--driectivey-->
+<script src="modules/directives/kt_dashboard_widget.js"></script>
+<script src="modules/directives/watch_height.js"></script>
 
 
 </body>
