neue diagramme taosts dashboard dialog errormeldungen

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,8 @@
 <!--Services-->
 <script src="modules/services/data_servcie.js"></script>
 <script src="modules/services/pref_service.js"></script>
+<script src="modules/services/toast_service.js"></script>
+<script src="modules/services/dialog_service.js"></script>
 
 </body>
 
