Login Localization bugfixxes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <script src="bower_components/angular-material/angular-material.js"></script>
 <script src="bower_components/scrollMonitor/scrollMonitor.js"></script>
 <script src="bower_components/angular-viewport-watch/angular-viewport-watch.js"></script>
+<script src="bower_components/angular-translate/angular-translate.min.js"></script>
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/javascript-detect-element-resize/jquery.resize.js"></script>
@@ -40,6 +41,7 @@
 <script src="app.js"></script>
 <!--controller-->
 <script src="modules/controller/dashboards_controller.js"></script>
+<script src="modules/controller/login_controller.js"></script>
 <!--directive-->
 <script src="modules/directives/widgets/kt_dashboard_widget.js"></script>
 <script src="modules/directives/watch_size.js"></script>
@@ -50,6 +52,7 @@
 <script src="modules/services/pref_service.js"></script>
 <script src="modules/services/toast_service.js"></script>
 <script src="modules/services/dialog_service.js"></script>
+<script src="modules/services/auth_service.js"></script>
 
 </body>
 
