--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <!--directive-->
 <script src="modules/directives/widgets/kt_dashboard_widget.js"></script>
 <script src="modules/directives/watch_size.js"></script>
+<script src="modules/directives/drag_listener.js"></script>
 <script src="modules/directives/toolbars/kt_dashboards_toolbar.js"></script>
 <script src="modules/directives/side_navs/kt_dashboard_edit_side_nav.js"></script>
 <!--Services-->
