--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <script src="bower_components/scrollMonitor/scrollMonitor.js"></script>
 <script src="bower_components/angular-viewport-watch/angular-viewport-watch.js"></script>
 <script src="bower_components/angular-translate/angular-translate.min.js"></script>
+<script src="bower_components/angular-mocks/angular-mocks.js"></script>
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/javascript-detect-element-resize/jquery.resize.js"></script>
@@ -36,6 +37,7 @@
 <script src="bower_components/highcharts/highstock.src.js"></script>
 <script src="bower_components/highcharts/modules/exporting.js"></script>
 <script src="bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
+
 
 <!--app-->
 <script src="app.js"></script>
